--- a/src/Feature/D3Identity/code/Views/Logo.cshtml
+++ b/src/Feature/D3Identity/code/Views/Logo.cshtml
@@ -1,5 +1,5 @@
-﻿@using Sitecore.Feature.Identity
-@using Sitecore.Feature.Identity.Repositories
+﻿@using Sitecore.Feature.D3Identity
+@using Sitecore.Feature.D3Identity.Repositories
 @using Sitecore.Foundation.SitecoreExtensions.Extensions
 @using Sitecore.Links
 @model Sitecore.Mvc.Presentation.RenderingModel
