--- a/src/Feature/D3Teasers/code/Views/D3Teasers/TitleImageSummaryTeaser.cshtml
+++ b/src/Feature/D3Teasers/code/Views/D3Teasers/TitleImageSummaryTeaser.cshtml
@@ -1,4 +1,4 @@
-﻿@using Sitecore.Feature.Teasers
+﻿@using Sitecore.Feature.D3Teasers
 @using Sitecore.Foundation.Alerts
 @using Sitecore.Foundation.Alerts.Extensions
 @using Sitecore.Foundation.SitecoreExtensions.Extensions
