--- a/src/Feature/D3Identity/code/Views/ContactInformation.cshtml
+++ b/src/Feature/D3Identity/code/Views/ContactInformation.cshtml
@@ -1,5 +1,5 @@
-﻿@using Sitecore.Feature.Identity
-@using Sitecore.Feature.Identity.Repositories
+﻿@using Sitecore.Feature.D3Identity
+@using Sitecore.Feature.D3Identity.Repositories
 @using Sitecore.Foundation.Dictionary.Extensions
 @using Sitecore.Foundation.SitecoreExtensions.Extensions
 @using Sitecore.Foundation.Theming.Extensions
@@ -18,26 +18,10 @@
 
   <address>
     <p>
-      @if (Sitecore.Context.PageMode.IsExperienceEditor || identity.FieldHasValue(Templates.Identity.Fields.OrganisationName))
-      {
-        <strong>@Html.Sitecore().Field(Templates.Identity.Fields.OrganisationName, identity)</strong>
-      }
-      <br />
-      @Html.Sitecore().Field(Templates.Identity.Fields.OrganisationAddress, identity, new
-                                                                                      {
-                                                                                        linebreaks = "<br/>"
-                                                                                      })
-    </p>
-    <p>
       @if (Sitecore.Context.PageMode.IsExperienceEditor || identity.FieldHasValue(Templates.Identity.Fields.OrganisationPhone))
       {
         <br />
         <i class="fa fa-phone"></i> @Html.Sitecore().Field(Templates.Identity.Fields.OrganisationPhone, identity)
-      }
-      @if (Sitecore.Context.PageMode.IsExperienceEditor || identity.FieldHasValue(Templates.Identity.Fields.OrganisationEmail))
-      {
-        <br />
-        <i class="fa fa-envelope"></i> @Html.Sitecore().Field(Templates.Identity.Fields.OrganisationEmail, identity)
       }
     </p>
   </address>
