--- a/src/Feature/D3Identity/code/Views/D3Identity/ContactInformation.cshtml
+++ b/src/Feature/D3Identity/code/Views/D3Identity/ContactInformation.cshtml
@@ -1,28 +1,4 @@
 ﻿@using Sitecore.Feature.D3Identity
-@using Sitecore.Foundation.Dictionary.Extensions
-@using Sitecore.Foundation.SitecoreExtensions.Extensions
-@using Sitecore.Foundation.Theming.Extensions
 @model Sitecore.Mvc.Presentation.RenderingModel
 
-@{
-  var identity = IdentityRepository.Get(Model.Item);
-  if (identity == null)
-  {
-    return;
-  }
-}
-
-<div class="well @Model.Rendering.GetBackgroundClass()">
-  <h4>@Html.Sitecore().Dictionary("/identity/contact information/title", "Contact information")</h4>
-
-  <address>
-    <p>
-      @if (Sitecore.Context.PageMode.IsExperienceEditor || identity.FieldHasValue(Templates.Identity.Fields.OrganisationPhone))
-      {
-        <br />
-        <i class="fa fa-phone"></i> @Html.Sitecore().Field(Templates.Identity.Fields.OrganisationPhone, identity)
-      }
-    </p>
-  </address>
-</div>
-
+<p>Call <a href="tel:+@Html.Sitecore().Field(Templates.Identity.Fields.OrganisationPhone, identity)">@Html.Sitecore().Field(Templates.Identity.Fields.OrganisationPhone, identity)</a></p>
