--- a/src/Feature/D3Identity/code/Views/D3Identity/Logo.cshtml
+++ b/src/Feature/D3Identity/code/Views/D3Identity/Logo.cshtml
@@ -1,26 +1,27 @@
 ﻿@using Sitecore.Feature.D3Identity
-@using Sitecore.Foundation.SitecoreExtensions.Extensions
-@using Sitecore.Links
 @model Sitecore.Mvc.Presentation.RenderingModel
 
-
-@{
-  var identity = IdentityRepository.Get(Model.Item);
-  if (identity == null)
+<script type="application/ld+json">
   {
-    return;
+  "@context": "http://schema.org",
+  "@type": "Organization",
+  "url": "http://www.dubaidesigndistrict.com",
+  "logo": "http://www.dubaidesigndistrict.comimages/logo.png"
   }
+</script>
+@{
   //TODO: Resolve context site from item (implement in Foundation.Multisite)
   var homeUrl = Sitecore.Context.Site?.GetStartItem()?.Url() ?? "/";
   var hasTagline = identity.FieldHasValue(Templates.Identity.Fields.LogoTagLine);
 }
 
-<a class="navbar-brand @(hasTagline ? "has-tagline" : "")" href="@homeUrl">
+<a class="logo @(hasTagline ? "has-tagline" : "")" href="@homeUrl">
   <span class="logo">
-    @Html.Sitecore().ImageField(Templates.Identity.Fields.Logo, identity, mh: 50)
+    @Html.Sitecore().ImageField(Templates.Identity.Fields.Logo, identity, mh: 74, mw: 130)
     @if (hasTagline)
     {
       <small class="tagline">@Html.Sitecore().Field(Templates.Identity.Fields.LogoTagLine, identity)</small>
     }
   </span>
 </a>
+ 
