--- a/src/Project/D3/code/Views/D3/Layouts/Default.cshtml
+++ b/src/Project/D3/code/Views/D3/Layouts/Default.cshtml
@@ -1,9 +1,4 @@
-﻿@using Sitecore.Foundation.Assets
-@using Sitecore.Foundation.Assets.Models
-@using Sitecore.Foundation.Assets.Services
-@using Sitecore.Foundation.SitecoreExtensions.Extensions
-@using Sitecore.Mvc.Analytics.Extensions
-@inherits WebViewPage
+﻿@inherits WebViewPage
 @{
   Layout = null;
 }
