--- a/src/Project/Common/code/Views/D3Common/PageFooter.cshtml
+++ b/src/Project/Common/code/Views/D3Common/PageFooter.cshtml
@@ -1,4 +1,5 @@
-﻿<div class="subfooter">
+﻿@model Sitecore.Mvc.Presentation.RenderingModel
+<div class="subfooter">
   <div class="container">
     <div class="row">
       <div class="col-sm-4 col-md-3 col-lg-3">
