--- a/src/Feature/Identity/code/Views/Identity/ContactInformation.cshtml
+++ b/src/Feature/Identity/code/Views/Identity/ContactInformation.cshtml
@@ -13,7 +13,7 @@
   }
 }
 
-<div class="well @Model.Rendering.GetBackgroundClass()">
+@*<div class="well @Model.Rendering.GetBackgroundClass()">
   <h4>@Html.Sitecore().Dictionary("/identity/contact information/title", "Contact information")</h4>
 
   <address>
@@ -41,4 +41,4 @@
       }
     </p>
   </address>
-</div>
+</div>*@
