--- a/src/Project/Common/code/Views/Common/SubLayouts/PageMain.cshtml
+++ b/src/Project/Common/code/Views/Common/SubLayouts/PageMain.cshtml
@@ -1,1 +1,20 @@
-﻿
+﻿<div class="container">
+  <div class="row">
+    <div class="col-xs-12">
+      @Html.Sitecore().Placeholder("banner-main")
+    </div>
+  </div>
+  <div class="row">
+    <div class="col-md-4 col-md-push-0 col-sm-8 col-sm-push-2 col-xs-12">
+      @Html.Sitecore().Placeholder("events-main")
+    </div>
+    <div class="col-md-8 col-xs-12">
+      @Html.Sitecore().Placeholder("events-detail-main")
+    </div>
+  </div>
+  <div class="row">
+    <div class="col-xs-12">
+      @Html.Sitecore().Placeholder("static-banners-main")
+    </div>
+  </div>
+</div>
