--- a/src/Feature/Identity/code/Views/Identity/Logo.cshtml
+++ b/src/Feature/Identity/code/Views/Identity/Logo.cshtml
@@ -6,22 +6,20 @@
 
 
 @{
-  var identity = IdentityRepository.Get(Model.Item);
-  if (identity == null)
-  {
-    return;
-  }
-  //TODO: Resolve context site from item (implement in Foundation.Multisite)
-  var homeUrl = Sitecore.Context.Site?.GetStartItem()?.Url() ?? "/";
-  var hasTagline = identity.FieldHasValue(Templates.Identity.Fields.LogoTagLine);
+    var identity = IdentityRepository.Get(Model.Item);
+    if (identity == null)
+    {
+      return;
+    }
+    var startItem = Sitecore.Context.Database.GetItem(Sitecore.Context.Site.StartPath);
+    var hasTagline = identity.FieldHasValue(Templates.Identity.Fields.LogoTagLine);
 }
-
-<a class="navbar-brand @(hasTagline ? "has-tagline" : "")" href="@homeUrl">
+<a class="navbar-brand @(hasTagline ? " has-tagline" : "" )" href="@Sitecore.Links.LinkManager.GetItemUrl(startItem)">
   <span class="logo">
-    @Html.Sitecore().ImageField(Templates.Identity.Fields.Logo, identity, mh: 50)
+    @Html.Sitecore().ImageField(Templates.Identity.Fields.Logo, identity,mw:130, mh: 74)
     @if (hasTagline)
     {
-      <small class="tagline">@Html.Sitecore().Field(Templates.Identity.Fields.LogoTagLine, identity)</small>
+    <small class="tagline">@Html.Sitecore().Field(Templates.Identity.Fields.LogoTagLine, identity)</small>
     }
   </span>
 </a>
