--- a/src/Feature/PageContent/code/Views/PageContent/PageBanner.cshtml
+++ b/src/Feature/PageContent/code/Views/PageContent/PageBanner.cshtml
@@ -2,28 +2,20 @@
 @using Sitecore.Foundation.Dictionary.Extensions
 @using Sitecore.Foundation.SitecoreExtensions.Extensions
 @model Sitecore.Mvc.Presentation.RenderingModel
-<h1 class="visually-hidden">Dubai Design District</h1>
-<div class="container">
-  <div class="row">
-    <div class="col-xs-12">
-      <section class="heroBanner-slider slick-initialized slick-slider slick-dotted">
-        <button class="slick-prev slick-arrow" aria-label="Previous" type="button" style="">Previous</button>
-        <div class="slick-list draggable">
-          <div class="slick-track" style="opacity: 1; width: 7861px; transform: translate3d(-1123px, 0px, 0px);">
-            <div class="heroBanner slick-slide slick-cloned" data-slick-index="-1" style="height: 437px; width: 1123px;" aria-hidden="true">
-              <div class="heroBanner-image  " style="background-image: url(&#39;//d3.imgix.net/images/banners/business-partners.jpg?q=60&amp;auto=format,compress&amp;w=1123&#39;)">
-                <img data-src="//d3.imgix.net/images/banners/business-partners.jpg?q=60&amp;auto=format,compress&amp;w=1123" data-srcset="//d3.imgix.net/images/banners/business-partners.jpg?q=60&amp;auto=format,compress&amp;w=720 720w, //d3.imgix.net/images/banners/business-partners.jpg?q=60&amp;auto=format,compress&amp;w=1024 1024w, //d3.imgix.net/images/banners/business-partners.jpg?q=60&amp;auto=format,compress&amp;w=1440 1440w, //d3.imgix.net/images/banners/business-partners.jpg?q=60&amp;auto=format,compress&amp;w=1920 1920w" src="data:image/gif;base64,R0lGODlhAQABAAD/ACwAAAAAAQABAAACADs=" alt="" role="presentation">
-              </div>
-              <div class="heroBanner-content">
-                <h2 class="text-uppercase">@Html.Sitecore().Field(Templates.HasPageContent.Fields.Title, Model.Item)</h2>
-                <p><a href="@Html.Sitecore().Field(Templates.HasPageContent.Fields.Link, Model.Item)" target="_self">Join Us</a></p>
-              </div>
-            </div>
-          </div>
+<section class="heroBanner-slider slick-initialized slick-slider slick-dotted">
+  <button class="slick-prev slick-arrow" aria-label="Previous" type="button" style="">Previous</button>
+  <div class="slick-list draggable">
+    <div class="slick-track" style="opacity: 1; width: 7861px; transform: translate3d(-1123px, 0px, 0px);">
+      <div class="heroBanner slick-slide slick-cloned" data-slick-index="-1" style="height: 437px; width: 1123px;" aria-hidden="true">
+        <div class="heroBanner-image  " style="background-image: url(&#39;//d3.imgix.net/images/banners/business-partners.jpg?q=60&amp;auto=format,compress&amp;w=1123&#39;)">
+          @Html.Sitecore().ImageField(Templates.HasPageContent.Fields.Image, Model.Item, mw: 1123)
         </div>
-        <button class="slick-next slick-arrow" aria-label="Next" type="button" style="">Next</button><ul class="slick-dots" style=""><li class="slick-active"><button type="button">1</button></li><li class=""><button type="button">2</button></li><li class=""><button type="button">3</button></li></ul>
-      </section>
+        <div class="heroBanner-content">
+          <h2 class="text-uppercase">@Html.Sitecore().Field(Templates.HasPageContent.Fields.Title, Model.Item)</h2>
+          <p><a href="@Html.Sitecore().Field(Templates.HasPageContent.Fields.Link, Model.Item)" target="_self"></a></p>
+        </div>
+      </div>
     </div>
   </div>
-</div>
-      
+  <button class="slick-next slick-arrow" aria-label="Next" type="button" style="">Next</button><ul class="slick-dots" style=""><li class="slick-active"><button type="button">1</button></li><li class=""><button type="button">2</button></li><li class=""><button type="button">3</button></li></ul>
+</section>
