--- a/src/Feature/PageContent/code/Views/PageContent/PageMilan.cshtml
+++ b/src/Feature/PageContent/code/Views/PageContent/PageMilan.cshtml
@@ -8,5 +8,5 @@
   Dubai Design District | UAE Design Stories: The Next Generation from The Emirates
 </title>
 <div class="col-md-12 col-centered">
-@item[Templates.HasPageContent.Fields.Summary]
+@Html.Sitecore().Field(Templates.HasPageContent.Fields.Summary)
 </div>
