--- a/src/Project/D3/code/Views/D3/Layouts/Default.cshtml
+++ b/src/Project/D3/code/Views/D3/Layouts/Default.cshtml
@@ -5,7 +5,7 @@
 <!--<![endif]-->
 <head>
   <title>
-    Dubai Design District | Homepage
+    Dubai Design District 
   </title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -28,39 +28,7 @@
   <meta name="msapplication-config" content="/favicon/browserconfig.xml">
   <meta name="theme-color" content="#ff0000">
 
-  @*<script type="application/ld+json">
-      {
-      "@context": "http://schema.org",
-      "@type": "WebSite",
-      "name": "Dubai Design District",
-      "alternateName": "d3",
-      "url": "http://www.dubaidesigndistrict.com"
-      }
-    </script>
-    <script type="application/ld+json">
-      {
-      "@context": "http://schema.org",
-      "@type": "Organization",
-      "url": "http://www.dubaidesigndistrict.com",
-      "logo": "http://www.dubaidesigndistrict.comimages/logo.png"
-      }
-    </script>
-    <script type="application/ld+json">
-      {
-      "@context": "http://schema.org",
-      "@type": "Person",
-      "name": "Dubai Design District",
-      "url": "http://www.dubaidesigndistrict.com",
-      "sameAs": [
-      "https://www.facebook.com/d3Dubai/",
-      "https://www.instagram.com/d3dubai/",
-      "https://www.linkedin.com/company/dubai-design-district",
-      "https://plus.google.com/+DubaiDesignDistrict-d3"
-      ]
-      }
-    </script>*@
-
-  <link rel="stylesheet" href="css/style-ltr_2.css" />
+  <link rel="stylesheet" href="@Url.Content("~/css/style-ltr_2.css")" />
 
   <script>
     (function(i, s, o, g, r, a, m) {
